# code

c/: .popen.c.swp  (+67 more)
c/leelee/: Makefile  Makefile.in  TODO  autogen.sh  config.h  config.h.in  config.status  configure  configure.in  libtool
c/leelee/CVS/: Entries
c/leelee/CVSROOT/CVS/: Entries  Repository
c/leelee/CVSROOT/Emptydir/CVS/: Repository
c/leelee/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
c/leelee/doc/: bot.conf  bot.oplist  bot.owner
c/leelee/doc/CVS/: Entries  Repository
c/leelee/src/: Makefile  Makefile.am  Makefile.in  api.c  api.h  auth.c  auth.h  auto_modes.c  auto_modes.h  bot  bot.c  bot.conf  bot.h  bot.seen  client.c  client.h  cmd.c  cmd.h  functions.c  functions.h  irc.c  irc.h  log  log.c  log.h  mconf.c  mconf.h  mconf_data.h  md5.c  md5.h  plugin_load.c  plugin_load.h  ssl.c  ssl.crt  ssl.h  ssl.key  tcl.c  tcl.h  tclcommands.c  tclcommands.h  (+2 more)
c/leelee/src/.deps/: api.Po  auth.Po  auto_modes.Po  bot.Po  client.Po  cmd.Po  functions.Po  irc.Po  irc_funcs.Po  koepfle.Po  lists.Po  log.Po  mconf.Po  md5.Po  plugin_load.Po  seen.Po  ssl.Po
c/leelee/src/CVS/: Entries  Repository
c/leelee/src/plugins/: Makefile  Makefile.am  Makefile.in
c/leelee/src/plugins/double_nick/: Makefile  Makefile.am  Makefile.in  double_nick.c
c/leelee/src/plugins/double_nick/.deps/: double_nick.Plo
c/leelee/src/plugins/double_nick/.libs/: libdouble_nick.lai  libdouble_nick.so.0.0.0
c/leelee/src/plugins/seen/: Makefile  Makefile.am  Makefile.in  seen.c  seen.h
c/leelee/src/scripts/: show_variables.tcl
(+470 files in other folders)
