AM_CFLAGS = @flags@
AM_LDFLAGS = -rdynamic

SUBDIRS = plugins

bin_PROGRAMS = bot

bot_SOURCES = \
bot.c \
client.c \
cmd.c \
mconf.c \
functions.c \
irc.c \
log.c \
md5.c \
auth.c \
auto_modes.c \
plugin_load.c \
api.c \
tcl.c \
tclcommands.c \
ssl.c

noinst_HEADERS = \
bot.h \
client.h \
cmd.h \
mconf.h \
functions.h \
irc.h \
log.h \
md5.h \
auth.h \
auto_modes.h \
plugin_load.h \
api.h \
ssl.h
